feat: update dotfiles with new features

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,17 +1,18 @@
 # FONT
-font_family      FiraCode Nerd Font
+font_family      JetBrainsMono Nerd Font
 bold_font        auto
 italic_font      auto
 font_size        19.0
-adjust_line_height 110%
-adjust_column_width 100%
+line_height      1.6  # increase vertical space between lines
+font_height      10
+modify_font cell_height 130%
 
 # CURSOR
 cursor_shape     block
 cursor_blink_interval 0.5
 
 # COLORS (Dracula example)
-include dracula.conf  # Assuming you download a theme (see below)
+include dracula.conf
 
 # TABS
 tab_bar_edge     bottom
@@ -32,14 +33,22 @@ map ctrl+shift+enter launch --cwd=current
 map ctrl+shift+n new_os_window
 map ctrl+shift+t new_tab
 
-# setting for toggle wrap
+# Toggle word wrap
 map alt+z send_text all \ez
 
-
-# Performance
+# PERFORMANCE
 repaint_delay 10
 
-# FONT SETTINGS
-font_family JetBrainsMono Nerd Font
-bold_font    auto
-italic_font  auto
+# SKIP WORDS IN INSERT MODE
+map option+right send_text all \x1bf
+map option+left  send_text all \x1bb
+
+# TOM SOLUTION TO SKIP WORDS USING OPTION
+map alt+left  send_text all \x1bb
+map alt+right send_text all \x1bf
+
+# FIX COMMENT LINES 
+# Make Ctrl + / send ASCII 0x1F (aka Ctrl + _), which Neovim maps as <C-_>
+map ctrl+/ send_text all \x1f
+
+
