--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,10 +1,8 @@
 # FONT
-font_family      JetBrainsMono Nerd Font
+# font_family      JetBrainsMono Nerd Font
 bold_font        auto
 italic_font      auto
 font_size        19.0
-line_height      1.6  # increase vertical space between lines
-font_height      10
 modify_font cell_height 130%
 
 # CURSOR
@@ -12,7 +10,7 @@ cursor_shape     block
 cursor_blink_interval 0.5
 
 # COLORS (Dracula example)
-include dracula.conf
+# include dracula.conf
 
 # TABS
 tab_bar_edge     bottom
@@ -21,7 +19,6 @@ tab_powerline_style slanted
 
 # SCROLLING
 scrollback_lines 10000
-enable_mouse_reporting yes
 
 # WINDOW
 window_margin_width 8
@@ -50,5 +47,4 @@ map alt+right send_text all \x1bf
 # FIX COMMENT LINES 
 # Make Ctrl + / send ASCII 0x1F (aka Ctrl + _), which Neovim maps as <C-_>
 map ctrl+/ send_text all \x1f
-
 
