--- a/ghostty/config
+++ b/ghostty/config
@@ -1,20 +1,24 @@
+# for toggle word wrap
+# alt-is-meta=true
+macos-option-as-alt=true
+
 # font
 font-family = Monaco
-bold-font = auto
-italic-font = auto
+# bold-font = auto
+# italic-font = auto
 font-size = 19
 # Ghostty doesn’t have modify_font cell_height directly, but you can approximate with:
-font-height-scale = 1.3
+# font-height-scale = 1.3
 adjust-cell-height = 10%
 font-thicken = true
 
 # cursor
-cursor-shape = block
+# cursor-shape = block
 adjust-cursor-thickness = 4
 cursor-style-blink = true
 theme = dracula
 mouse-hide-while-typing=true
-cursor-color = #A0E090 turquoise cyan
+cursor-color = #A0E090 
 cursor-text = #111111
 
 # colors
@@ -24,29 +28,30 @@ background = 2e2e2e
 background-opacity = 0.97
 
 # tabs
-tab-bar-position = bottom
-tab-bar-style = powerline
-tab-bar-powerline-style = slanted
+# tab-bar-position = bottom
+# tab-bar-style = powerline
+# tab-bar-powerline-style = slanted
 
 # scrolling
-scrollback-lines = 10000
+# scrollback-lines = 10000
 
 # window
 window-padding-x = 8
 window-padding-y = 8
 background-opacity = 0.92
-window-save-state = true
+window-save-state = default
 macos-titlebar-proxy-icon = visible
+
 # keybindings
-keybind = ctrl+shift+enter=launch:cwd=current
-keybind = ctrl+shift+n=new_os_window
-keybind = ctrl+shift+t=new_tab
-keybind = alt+z=send_text:\ez
-keybind = alt+left=send_text:\x1bb
-keybind = alt+right=send_text:\x1bf
-keybind = option+left=send_text:\x1bb
-keybind = option+right=send_text:\x1bf
-keybind = ctrl+slash=send_text:\x1f
+# keybind = ctrl+shift+enter=launch:cwd=current
+# keybind = ctrl+shift+n=new_os_window
+# keybind = ctrl+shift+t=new_tab
+# keybind = alt+z=send_text:\ez
+# keybind = alt+left=send_text:\x1bb
+# keybind = alt+right=send_text:\x1bf
+# keybind = option+left=send_text:\x1bb
+# keybind = option+right=send_text:\x1bf
+# keybind = ctrl+slash=send_text:\x1f
 
 # performance
 # Ghostty’s rendering is already fast; no repaint_delay option needed.
